service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-one-service
spec:
  selector:
    app: myapp-one
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
